feat: change myclas learn and teach, show all api question